finish docs (and remove draft flatten)

--- a/docs/source/stream.mdx
+++ b/docs/source/stream.mdx
@@ -109,9 +109,9 @@ Define sampling probabilities from each of the original datasets for more contro
 
 Around 80% of the final dataset is made of the `en_dataset`, and 20% of the `fr_dataset`.
 
-## Rename, remove, cast, and flatten
+## Rename, remove, and cast
 
-The following methods allow you to modify the columns of a dataset. These methods are useful for renaming or removing columns, changing columns to a new set of features, and flattening nested column structures.
+The following methods allow you to modify the columns of a dataset. These methods are useful for renaming or removing columns and changing columns to a new set of features.
 
 ### Rename
 
