--- a/docs/source/stream.mdx
+++ b/docs/source/stream.mdx
@@ -91,12 +91,11 @@ You can split your dataset one of two ways:
 
 ```py
 >>> from datasets import interleave_datasets
->>> from itertools import islice
 >>> en_dataset = load_dataset('oscar', "unshuffled_deduplicated_en", split='train', streaming=True)
 >>> fr_dataset = load_dataset('oscar', "unshuffled_deduplicated_fr", split='train', streaming=True)
 
 >>> multilingual_dataset = interleave_datasets([en_dataset, fr_dataset])
->>> print(list(islice(multilingual_dataset, 2)))
+>>> list(multilingual_dataset.take(2))
 [{'text': 'Mtendere Village was inspired by the vision...'}, {'text': "Média de débat d'idées, de culture et de littérature..."}]
 ```
 
@@ -104,20 +103,77 @@ Define sampling probabilities from each of the original datasets for more contro
 
 ```py
 >>> multilingual_dataset_with_oversampling = interleave_datasets([en_dataset, fr_dataset], probabilities=[0.8, 0.2], seed=42)
->>> print(list(islice(multilingual_dataset_with_oversampling, 2)))
+>>> list(multilingual_dataset_with_oversampling.take(2))
 [{'text': 'Mtendere Village was inspired by the vision...'}, {'text': 'Lily James cannot fight the music...'}]
 ```
 
 Around 80% of the final dataset is made of the `en_dataset`, and 20% of the `fr_dataset`.
 
-## Remove
+## Rename, remove, and cast
 
-Remove columns on-the-fly with [`datasets.IterableDataset.remove_columns`]. Specify the name of the column to remove:
+The following methods allow you to modify the columns of a dataset. These methods are useful for renaming or removing columns and changing columns to a new set of features.
+
+### Rename
+
+Use [`datasets.IterableDataset.rename_column`] when you need to rename a column in your dataset. Features associated with the original column are actually moved under the new column name, instead of just replacing the original column in-place.
+
+Provide [`datasets.IterableDataset.rename_column`] with the name of the original column, and the new column name:
+
+```py
+>>> from datasets import load_dataset
+>>> dataset = load_dataset('mc4', 'en', streaming=True, split='train')
+>>> dataset = dataset.rename_column("text", "content")
+```
+
+### Remove
+
+When you need to remove one or more columns, give [`datasets.IterableDataset.remove_columns`] the name of the column to remove. Remove more than one column by providing a list of column names:
 
 ```py
 >>> from datasets import load_dataset
 >>> dataset = load_dataset('mc4', 'en', streaming=True, split='train')
 >>> dataset = dataset.remove_columns('timestamp')
+```
+
+### Cast
+
+[`datasets.IterableDataset.cast`] changes the feature type of one or more columns. This method takes your new `datasets.Features` as its argument. The following sample code shows how to change the feature types of `datasets.ClassLabel` and `datasets.Value`:
+
+```py
+>>> from datasets import load_dataset
+>>> dataset = load_dataset('glue', 'mrpc', split='train')features
+{'sentence1': Value(dtype='string', id=None),
+'sentence2': Value(dtype='string', id=None),
+'label': ClassLabel(num_classes=2, names=['not_equivalent', 'equivalent'], names_file=None, id=None),
+'idx': Value(dtype='int32', id=None)}
+
+>>> from datasets import ClassLabel, Value
+>>> new_features = dataset.features.copy()
+>>> new_features["label"] = ClassLabel(names=['negative', 'positive'])
+>>> new_features["idx"] = Value('int64')
+>>> dataset = dataset.cast(new_features)
+>>> dataset.features
+{'sentence1': Value(dtype='string', id=None),
+'sentence2': Value(dtype='string', id=None),
+'label': ClassLabel(num_classes=2, names=['negative', 'positive'], names_file=None, id=None),
+'idx': Value(dtype='int64', id=None)}
+```
+
+<Tip>
+
+Casting only works if the original feature type and new feature type are compatible. For example, you can cast a column with the feature type `Value('int32')` to `Value('bool')` if the original column only contains ones and zeros.
+
+</Tip>
+
+Use [`datasets.Dataset.cast_column`] to change the feature type of just one column. Pass the column name and its new feature type as arguments:
+
+```py
+>>> dataset.features
+{'audio': Audio(sampling_rate=44100, mono=True, id=None)}
+
+>>> dataset = dataset.cast_column("audio", Audio(sampling_rate=16000))
+>>> dataset.features
+{'audio': Audio(sampling_rate=16000, mono=True, id=None)}
 ```
 
 ## Map
