--- a/docs/source/loading.mdx
+++ b/docs/source/loading.mdx
@@ -73,6 +73,12 @@ Specify a custom split with the `split` parameter:
 
 🤗 Datasets can be loaded from local files stored on your computer, and also from remote files. The datasets are most likely stored as a `csv`, `json`, `txt` or `parquet` file. The [`datasets.load_dataset`] method is able to load each of these file types.
 
+<Tip>
+
+Curious about how to load datasets for vision? Check out the image loading guide [here](./image_process)!
+
+</Tip>
+
 ### CSV
 
 🤗 Datasets can read a dataset made up of one or several CSV files:
@@ -177,38 +183,6 @@ To load remote parquet files via HTTP, you can pass the URLs:
 >>> data_files = {"train": base_url + "wikipedia-train.parquet"}
 >>> wiki = load_dataset("parquet", data_files=data_files, split="train")
 ```
-
-### Image folders
-
-🤗 Datasets can also load generic image folders.
-
-The folder structure should look like this:
-
-```
-   data/dog/xxx.png
-   data/dog/xxy.png
-   data/dog/xxz.png
-
-   data/cat/123.png
-   data/cat/nsdf3.png
-   data/cat/asd932_.png
-```
-
-To load an `imagefolder` dataset, simply pass the root path of the image folder to the `data_dir` kwarg of [`datasets.load_dataset`], which is a shorthand syntax for `data_files=os.path.join(data_dir, **)`.
-
-```py
->>> from datasets import load_dataset
->>> dataset = load_dataset("imagefolder", data_dir="/path/to/data")
-```
-
-To load remote image folders via HTTP, you can pass the URLs:
-
-```py
->>> dataset = load_dataset("imagefolder", data_files="https://download.microsoft.com/download/3/E/1/3E1C3F21-ECDB-4869-8368-6DEBA77B919F/kagglecatsanddogs_3367a.zip", split="train")
-```
-
-The resulting dataset will include an `image` feature, which is a [`PIL.Image`] loaded from the image file, and the corresponding `label` inferred from the directory structure.
-
 
 ## In-memory data
 
