[docs] make dummy data optional

--- a/docs/source/dataset_script.mdx
+++ b/docs/source/dataset_script.mdx
@@ -280,9 +280,9 @@ datasets-cli test datasets/<your-dataset-folder> --save_infos --all_configs
 
 2. If your dataset loading script passed the test, you should now have a `dataset_infos.json` file in your dataset folder. This file contains information about the dataset, like its `features` and `download_size`.
 
-### Dummy data
+### (Optional) Dummy data
 
-Next, you need to create some dummy data for automated testing. There are two methods for generating dummy data: automatically and manually. 
+If you want to be able to test your dataset script without downloading the full dataset, you need to create some dummy data for automated testing. There are two methods for generating dummy data: automatically and manually. 
 
 #### Automatic
 
