Add tqdm utilites to docs

--- a/docs/source/package_reference/logging_methods.mdx
+++ b/docs/source/package_reference/logging_methods.mdx
@@ -50,6 +50,12 @@ By default, `tqdm` progress bars will be displayed during dataset download and p
 
 [[autodoc]] datasets.logging.get_logger
 
+[[autodoc]] datasets.logging.enable_progress_bar
+
+[[autodoc]] datasets.logging.disable_progress_bar
+
+[[autodoc]] datasets.is_progress_bar_enabled
+
 ## Levels
 
 ### datasets.logging.CRITICAL
