--- a/docs/source/package_reference/main_classes.mdx
+++ b/docs/source/package_reference/main_classes.mdx
@@ -95,7 +95,9 @@ The base class [`datasets.Dataset`] implements a Dataset backed by an Apache Arr
 
 [[autodoc]] datasets.interleave_datasets
 
-[[autodoc]] datasets.set_caching_enabled
+[[autodoc]] datasets.enable_caching
+
+[[autodoc]] datasets.disable_caching
 
 [[autodoc]] datasets.is_caching_enabled
 
