--- a/docs/source/image_process.mdx
+++ b/docs/source/image_process.mdx
@@ -12,7 +12,7 @@
 The images in an image dataset are typically either a:
 
 - PIL `image`.
-- Path to an image file that you can load. 
+- Path to an image file you can load. 
 
 For example, load the [Food-101](https://huggingface.co/datasets/food101) dataset and take a look:
 
@@ -66,7 +66,7 @@ folder/cat/bengal.png
 folder/cat/birman.png
 ```
 
-Then you can load your dataset by specifying `imagefolder` and the directory of your dataset in `data_dir`:
+Then load your dataset by specifying `imagefolder` and the directory of your dataset in `data_dir`:
 
 ```py
 >>> from datasets import load_dataset
@@ -104,7 +104,7 @@ Create a function to apply the `ColorJitter` transform to an image:
 ...     return examples
 ```
 
-Then you can use the [`~Dataset.set_transform`] function to apply the transformation on-the-fly to consume less disk space. You should use [`~Dataset.set_transform`] if you only need to access the examples once:
+Then you can use the [`~Dataset.set_transform`] function to apply the transform on-the-fly to consume less disk space. Use this function if you only need to access the examples once:
 
 ```py
 >>> dataset.set_transform(transforms)
@@ -124,10 +124,34 @@ Now visualize the results of the `ColorJitter` transform:
 
 ## Map
 
-[`~Dataset.map`] can also apply transforms over an entire dataset. When you use [`~Dataset.map`] to apply transforms, it generates a cache file. This saves time because you don't have to execute the same transform twice. You should use [`~Dataset.map`] for operations you only run once per training - like resizing an image - instead of using it for operations that are executed for each epoch, like data augmentations.
+[`~Dataset.map`] can also apply transforms over an entire dataset and it also generates a cache file.
 
-To apply the same `ColorJitter` transform from above with [`~Dataset.map`], you need to set `batched=True`:
+Create a simple [`Resize`](https://pytorch.org/vision/stable/generated/torchvision.transforms.Resize.html) function:
 
 ```py
->>> processed_food = dataset.map(transforms, batched=True)
+>>> from torchvision.transforms import Resize
+
+>>> resize = Resize([100,100])
+>>> def transforms(examples):
+...     examples["pixel_values"] = [resize(image.convert("RGB")) for image in examples["image"]]
+...     return examples
 ```
+
+Now [`~Dataset.map`] the function over the entire dataset and set `batched=True`. The transform returns `pixel_values` as a cacheable `PIL.Image` object:
+
+```py
+>>> dataset = dataset.map(transforms, batched=True)
+>>> dataset[0]
+{'image': <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=384x512 at 0x7F058237BCD0>,
+ 'label': 6,
+ 'pixel_values': <PIL.PngImagePlugin.PngImageFile image mode=RGB size=100x100 at 0x7F058237BB10>}
+```
+
+This saves time because you don't have to execute the same transform twice. It is best to use [`~Dataset.map`] for operations you only run once per training - like resizing an image - instead of using it for operations executed for each epoch, like data augmentations.
+
+[`~Dataset.map`] takes up some memory, but you can reduce its memory requirements with the following parameters:
+
+- [`batch_size`](./package_reference/main_classes#datasets.DatasetDict.map.batch_size) determines the number of examples that are processed in one call to the transform function.
+- [`writer_batch_size`](./package_reference/main_classes#datasets.DatasetDict.map.writer_batch_size) determines the number of processed examples that are kept in memory before they are stored away.
+
+Both parameter values default to 1000, which can be expensive if you are storing images. Lower the value to use less memory when calling [`~Dataset.map`].
