--- a/docs/source/stream.mdx
+++ b/docs/source/stream.mdx
@@ -266,6 +266,8 @@ You can filter rows in the dataset based on a predicate function using [`dataset
 
 [`datasets.IterableDataset`] can be integrated into a training loop. First, shuffle the dataset:
 
+<frameworkcontent>
+<pt>
 ```py
 >>> seed, buffer_size = 42, 10_000
 >>> dataset = dataset.shuffle(seed, buffer_size=buffer_size)
@@ -297,6 +299,8 @@ Lastly, create a simple training loop and start training:
 ...         optimizer.zero_grad()
 ...         if i % 10 == 0:
 ...             print(f"loss: {loss}")
-===PT-TF-SPLIT===
-# WIP
 ```
+</pt>
+</frameworkcontent>
+
+<!-- TODO: Write the TF content! -->
