✨ fix links in callouts

--- a/docs/source/about_dataset_features.mdx
+++ b/docs/source/about_dataset_features.mdx
@@ -49,7 +49,7 @@ The `answers` field is constructed using the [`datasets.Sequence`] feature becau
 
 <Tip>
 
-See the [flatten](#flatten) section to learn how you can extract the nested subfields as their own independent columns.
+See the [flatten](./process#flatten) section to learn how you can extract the nested subfields as their own independent columns.
 
 </Tip>
 
