--- a/docs/source/process.mdx
+++ b/docs/source/process.mdx
@@ -512,7 +512,7 @@ Separate datasets can be concatenated if they share the same column types. Conca
 
 <Tip>
 
-You can also mix several datasets together by taking alternating examples from each one to create a new dataset. This is known as interleaving, and you can use it with [`datasets.interleave_datasets`]. Both [`datasets.interleave_datasets`] and [`datasets.concatenate_datasets`] will work with regular [`datasets.Dataset`] and [`datasets.IterableDataset`] objects. Refer to the [interleave_datasets](#interleave_datasets) section for an example of how it's used.
+You can also mix several datasets together by taking alternating examples from each one to create a new dataset. This is known as interleaving, and you can use it with [`datasets.interleave_datasets`]. Both [`datasets.interleave_datasets`] and [`datasets.concatenate_datasets`] will work with regular [`datasets.Dataset`] and [`datasets.IterableDataset`] objects. Refer to the [Stream](./stream#interleave) section for an example of how it's used.
 
 </Tip>
 
