--- a/docs/source/use_dataset.mdx
+++ b/docs/source/use_dataset.mdx
@@ -82,8 +82,8 @@ After you set the format, wrap the dataset with `torch.utils.data.DataLoader`. Y
 
 ### TensorFlow
 
-If you are using TensorFlow, you can use [`datasets.Dataset.to_tf_dataset`] to wrap the dataset with a *tf.data.Dataset*, which is natively understood by Keras.
-This means a *tf.data.Dataset* object can be iterated over to yield batches of data, and can be passed directly to methods like *model.fit()*.
+If you are using TensorFlow, you can use [`datasets.Dataset.to_tf_dataset`] to wrap the dataset with a **tf.data.Dataset**, which is natively understood by Keras.
+This means a **tf.data.Dataset** object can be iterated over to yield batches of data, and can be passed directly to methods like **model.fit()**.
 [`datasets.Dataset.to_tf_dataset`] accepts several arguments:
 
 1. `columns` specify which columns should be formatted (includes the inputs and labels).
@@ -129,7 +129,7 @@ This means a *tf.data.Dataset* object can be iterated over to yield batches of d
 
 <Tip>
 
-[`datasets.Dataset.to_tf_dataset`] is the easiest way to create a TensorFlow compatible dataset. If you don't want a `tf.data.Dataset` and would rather the dataset emit `tf.Tensor` objects, take a look at the [format](#format) section instead!
+[`datasets.Dataset.to_tf_dataset`] is the easiest way to create a TensorFlow compatible dataset. If you don't want a `tf.data.Dataset` and would rather the dataset emit `tf.Tensor` objects, take a look at the [format](./process#format) section instead!
 
 </Tip>
 
