--- a/docs/source/access.mdx
+++ b/docs/source/access.mdx
@@ -1,4 +1,4 @@
-# The `Dataset` object
+# The Dataset object
 
 In the previous tutorial, you learned how to successfully load a dataset. This section will familiarize you with the [`Dataset`] object. You will learn about the metadata stored inside a Dataset object, and the basics of querying a Dataset object to return rows and columns.
 
@@ -11,7 +11,7 @@ A [`Dataset`] object is returned when you load an instance of a dataset. This ob
 
 ## Metadata
 
-The [`Dataset`] object contains a lot of useful information about your dataset. For example, call ['dataset.info'] to return a short description of the dataset, the authors, and even the dataset size. This will give you a quick snapshot of the datasets most important attributes.
+The [`Dataset`] object contains a lot of useful information about your dataset. For example, call [`dataset.info`] to return a short description of the dataset, the authors, and even the dataset size. This will give you a quick snapshot of the datasets most important attributes.
 
 ```py
 >>> dataset.info
